--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "graphql": "^16.7.1",
+    "graphql-yoga": "^4.0.3",
     "next": "13.4.9",
+    "next-urql": "^5.0.2",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "urql": "^4.0.4"
   }
 }
